SET(SOURCES ui_Screen1.c
    ui_Screen2.c
    ui_Screen3.c
    ui_Screen4.c
    ui_Screen5.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_a_corn_poppy_png.c
    ui_img_a_corn_poppy_3_png.c
    ui_img_2960017.c
    ui_img_stby_png.c
    ui_img_ready_png.c
    ui_img_01_png.c
    ui_img_02_png.c
    ui_img_03_png.c
    ui_img_04_png.c
    ui_img_05_png.c
    ui_img_06_png.c
    ui_img_ready_01_png.c
    ui_img_ready_02_png.c
    ui_img_stby_01_png.c
    ui_img_stby_02_png.c
    ui_temporary_image.c
    fonts/ui_font_H1.c
    fonts/ui_font_Number.c
    fonts/ui_font_Number_big.c
    fonts/ui_font_Number_extra.c
    fonts/ui_font_Subtitle.c
    fonts/ui_font_Title.c
    fonts/ui_font_H1.c
    fonts/ui_font_Number.c
    fonts/ui_font_Number_big.c
    fonts/ui_font_Number_extra.c
    fonts/ui_font_Subtitle.c
    fonts/ui_font_Title.c)

add_library(ui ${SOURCES})
